Fix: the correct & incorrect colours were not showing when an answer was shown - I had to and error in the JS code - had added additional '' which were not needed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,16 @@ body {
   font-size: 62.5%;
 }
 
-* {
+ * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   color: #042949;
-}
+} 
+
+/* * {
+  box-sizing: border-box;
+} */
 
 h1,
 h2 {
@@ -44,9 +48,11 @@ h2 {
   margin: 0 auto;
 }
 
+  
 .container > * {
   width: 100%;
 }
+
 
 .flex-column {
   display: flex;
@@ -100,6 +106,7 @@ h2 {
   width: 100%;
   font-size: 1rem;
   border: 0.1rem solid rgb(86, 165, 235, 0.25);
+  border-radius: 5px;
   background-color: white;
 }
 
@@ -145,7 +152,7 @@ p {
 
 .hud-prefix {
   text-align: center;
-  font-size: 3rem;
+  font-size: 2rem;
   color: #56a5eb;
 }
 
